--- a/style.css
+++ b/style.css
@@ -5,9 +5,22 @@ body {
 h1 {
     color: navy;
     margin-left: 20px;
+    font: sans-serif;
+    text-align: justify;
 }
 
 p {
-	color: red;
 	margin-right: 20px;
+	font: sans-serif;
+	text-align: justify;
+}
+
+a {
+	margin-right: 20px;
+	font: sans-serif;
+	text-align: justify;
+}
+
+#id {
+	padding-right: 5px;
 }
